Made errors red. Made placeholder separated from the input start. Fixed banner rectangle hidden under top menu. Fixed  menu and header width. Fixed responsive issued with width

--- a/styles/sass/Banner.module.scss
+++ b/styles/sass/Banner.module.scss
@@ -10,10 +10,9 @@
 
 .rectangle{
     position: absolute;
-    width: 64vw;
-    height: 88vh;
-    left: 4rem;
-    bottom:5rem;
+    width: 60vw;
+    height: 75vh;
+    left: 6rem;
     border: 3rem double $lightgray;
     z-index: -1;
 }
