--- a/styles/sass/Contact.module.scss
+++ b/styles/sass/Contact.module.scss
@@ -86,6 +86,9 @@
     color: $white;
 }
 
+.error{
+    color:$red;
+}
 
 /*mobile responsive*/
 @media (max-width: 40rem){
