--- a/styles/sass/Skills.module.scss
+++ b/styles/sass/Skills.module.scss
@@ -26,6 +26,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    border: 1px solid $lightgray;
 }
 
 @supports(display: grid){
@@ -41,8 +42,7 @@
 @media (max-width: 40rem){
     @supports(display: grid){
         .skills_container{
-            grid-template-columns: repeat(2, 20%);
-            grid-gap: 6rem;
+            grid-template-columns: repeat(1, 90%);
         }
     }
 }
@@ -51,8 +51,7 @@
 @media (min-width: 40rem){
     @supports(display: grid){
         .skills_container{
-            grid-template-columns: repeat(4, 20%);
-            grid-gap:6rem;
+            grid-template-columns: repeat(4, 25%);
         }
     }
 }
