--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -1,3 +1,4 @@
  $black:black;
  $white:white;
  $lightgray:#f0f0f0;
+ $red:#ff0000;
